--- a/mern wd-6 js/ciricbuzz.html
+++ b/mern wd-6 js/ciricbuzz.html
@@ -28,7 +28,7 @@
     input, select, button {
         margin: 10px;
         padding: 10px;
-        border: none;
+        border: 2px solid black;
         border-radius: 5px;
         font-size: 16px;
     }
@@ -47,7 +47,7 @@
         justify-content: center;
         margin-top: 20px;
     }
-    .shape {
+    .square {
         width: 50px;
         height: 50px;
         margin: 10px;
@@ -85,11 +85,12 @@
 
         for (let i = 0; i < shapeCount; i++) {
             const shape = document.createElement("div");
-            shape.classList.add("shape");
+            shape.classList.add("square");
             shape.style.backgroundColor = shapeColor;
             
             if (shapeType === "circle") {
                 shape.classList.add("circle");
+                
             }
             container.appendChild(shape);
         }
