--- a/projects/guessnumber.html
+++ b/projects/guessnumber.html
@@ -75,6 +75,24 @@
         box-shadow: 0px 5px 15px rgba(255, 111, 97, 0.5);
     }
 
+    /* Animations */
+    @keyframes shake {
+        0% { transform: translateX(0); }
+        25% { transform: translateX(-10px); }
+        50% { transform: translateX(10px); }
+        75% { transform: translateX(-10px); }
+        100% { transform: translateX(0); }
+    }
+
+    @keyframes pulse {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.1); }
+        100% { transform: scale(1); }
+    }
+
+    .shake { animation: shake 0.5s ease-in-out; }
+    .pulse { animation: pulse 1s ease-in-out; }
+
     /* Result Section */
     .resultparas { margin-top: 20px; font-size: 18px; }
 
@@ -82,120 +100,126 @@
 
     .lastresult { font-weight: bold; color: #007bff; }
 
-    #newgame { display: none; }
+    /* New Game Button Styling */
+    #newgame {
+        display: none;
+        margin-top: 20px;
+    }
+
+    /* Background Colors */
+    .win-bg { background-color: #08f13f !important; } /* Light Green */
+    .lose-bg { background-color: #d31020 !important; } /* Light Red */
+
 </style>
 <body>
-    <div class="wrapper">
+    <div class="wrapper" id="gameContainer">
         <h1>Number Guessing Game</h1>
         <p>Try and guess a random number between 1 to 100.</p>
-        <p>you can guess 10 times</p>
+        <p>You can guess 10 times.</p>
         <br>
-            <form class="form">
-                <label for="guessfield" id="guess">Guess a number</label>
-                <input type="text" name="guessfield" id="guessfield">
-                <input type="submit" id="submit" value="submit guess">
-            </form>
+        <form class="form">
+            <label for="guessfield" id="guess">Guess a number</label>
+            <input type="text" name="guessfield" id="guessfield">
+            <input type="submit" id="submit" value="Submit Guess">
+        </form>
 
-            <div class="resultparas">
-                <p>previous guesses<span class="guesses"></span></p>
-                <p>Guess Remaiining: <span class="lastresult">10</span></p>
-                <p class="loworhigh"></p>
-            </div>
+        <div class="resultparas">
+            <p>Previous guesses: <span class="guesses"></span></p>
+            <p>Guesses Remaining: <span class="lastresult">10</span></p>
+            <p class="loworhigh"></p>
+        </div>
+
+        <button id="newgame">New Game</button>
     </div>
+
+    <script>
+        let randomNumber = Math.floor(Math.random() * 100) + 1;
+
+        const submit = document.querySelector("#submit");
+        const userInput = document.querySelector("#guessfield");
+        const guessSlot = document.querySelector(".guesses");
+        const remaining = document.querySelector(".lastresult");
+        const lowOrHigh = document.querySelector(".loworhigh");
+        const newGameButton = document.querySelector("#newgame");
+        const gameContainer = document.querySelector("#gameContainer");
+
+        let prevGuesses = [];
+        let numGuesses = 1;
+        let playGame = true;
+
+        if (playGame) {
+            submit.addEventListener("click", function (e) {
+                e.preventDefault();
+                const guess = parseInt(userInput.value);
+                validateGuess(guess);
+            });
+        }
+
+        function validateGuess(guess) {
+            if (isNaN(guess) || guess < 1 || guess > 100) {
+                alert("Please enter a valid number between 1 and 100");
+            } else {
+                prevGuesses.push(guess);
+                if (numGuesses === 11) {
+                    displayGuess(guess);
+                    displayMessage(`Game Over! The correct number was ${randomNumber}`);
+                    gameContainer.classList.add("shake", "lose-bg");  // Shake and red background
+                    endGame();
+                } else {
+                    displayGuess(guess);
+                    checkGuess(guess);
+                }
+            }
+        }
+
+        function checkGuess(guess) {
+            if (guess === randomNumber) {
+                displayMessage(`Congratulations! You guessed the correct number!`);
+                gameContainer.classList.add("pulse", "win-bg");  // Pulse and green background
+                endGame();
+            } else if (guess > randomNumber) {
+                displayMessage(`Too high! Try again.`);
+            } else {
+                displayMessage(`Too low! Try again.`);
+            }
+        }
+
+        function displayGuess(guess) {
+            userInput.value = "";
+            guessSlot.innerHTML += ` ${guess}`;
+            numGuesses++;
+            remaining.innerHTML = `${11 - numGuesses}`;
+        }
+
+        function displayMessage(message) {
+            lowOrHigh.innerHTML = `<h2>${message}</h2>`;
+        }
+
+        function endGame() {
+            userInput.value = "";
+            userInput.setAttribute("disabled", "");
+            submit.setAttribute("disabled", "");
+            newGameButton.style.display = "block";
+            playGame = false;
+        }
+
+        newGameButton.addEventListener("click", function () {
+            resetGame();
+        });
+
+        function resetGame() {
+            randomNumber = Math.floor(Math.random() * 100) + 1;
+            prevGuesses = [];
+            numGuesses = 1;
+            guessSlot.innerHTML = "";
+            remaining.innerHTML = "10";
+            lowOrHigh.innerHTML = "";
+            userInput.removeAttribute("disabled");
+            submit.removeAttribute("disabled");
+            newGameButton.style.display = "none";
+            gameContainer.classList.remove("shake", "pulse", "win-bg", "lose-bg");
+            playGame = true;
+        }
+    </script>
 </body>
-<script>
-    let randomnumber = (parseInt(Math.random()*100+1));
-    
-    const submit =  document.querySelector("#submit");
-    const userinput =  document.querySelector("#guessfield");
-    const guessslot = document.querySelector(".guesses");
-    const remaining = document.querySelector(".lastresult");
-    const loworhigh = document.querySelector(".loworhigh");
-    const startover = document.querySelector(".resultparas");
-
-   const p = document.createElement("p");
-
-   let prevguess= [];
-   let numguess = 1
-
-   let playgame = true;
-
-   if(playgame){
-       submit.addEventListener("click", function (e) {
-           e.preventDefault();
-           const guess = parseInt(userinput.value);
-           validateguess(guess);
-       });
-   }
-
-   function validateguess(guess){
-       if(isNaN(guess) || guess < 1 || guess>100 ){
-           alert("enter valid num btw 1 to 100")
-       }
-       else{
-           prevguess.push(guess);
-           if(numguess === 11){
-               displayguess(guess)
-               displaymessage(`Game over. Random number was ${randomnumber}`)
-               endgame();
-           }
-           else{
-               displayguess(guess)
-               checkguess(guess)
-           }
-       }
-
-   }
-
-   function checkguess(guess){
-
-      if(guess === randomnumber){
-           displaymessage(`you won`)
-           endgame();
-       }
-       else if(guess > randomnumber){
-           displaymessage(`number is high`)
-       }
-       else if(guess < randomnumber){
-           displaymessage(`number is low`)
-       }
-       
-   }
-
-   function displayguess(guess){
-       userinput.value= ""
-       guessslot.innerHTML +=` ${guess}  `
-       numguess ++;
-       remaining.innerHTML = `${11-numguess}`
-
-
-   }
-
-   function displaymessage(message) {
-
-       loworhigh.innerHTML = `<h2> ${message}</h2>`;
-   }
-   function endgame(){
-    userinput.value=""
-    userinput.setAttribute("disabled","")
-    p.classList.add("button");
-    p.innerHTML =` <h2 id ="newgame">New Game</h2>`
-    startover.appendChild(p)
-    playgame = (false)
-    newgame()
-   }
-function newgame(){
-    const newgamebtn = document.querySelector("#newgame");
-    newgamebtn.addEventListener("click",function(e){
-        randomnumber = (parseInt(Math.random()*100+1));
-        parseInt=[]
-        numguess=1
-        guessslot.innerHTML = ""
-        remaining.innerHTML = `${11- numguess}`
-        userinput.removeAttribute("disabled")
-        startover.removechild(p);
-    })
-}
-  
-</script>
-</html> 
+</html>
