--- a/mern wd-6 js/eventdaligation.html
+++ b/mern wd-6 js/eventdaligation.html
@@ -61,12 +61,12 @@
         // let newDiv= document.createElement("div");
         // newDiv.className= "box blue"
 
-        container.appendChild(newDiv);
+        // container.appendChild(newDiv);
         
         container.addEventListener("click",(event)=>{
             console.log(event.target);
 
-            clickedbox.textContent = event.target.className;
+            // clickedbox.textContent = event.target.className;
             
         })
     </script>
