--- a/mern wd-6 js/eventlisterner.html
+++ b/mern wd-6 js/eventlisterner.html
@@ -71,7 +71,7 @@
             event.preventDefault();
             const name=form.name.value;
             const email=form.email.value;
-            alert('Name : ${name} , Email : ${email}');
+            alert(`Name : ${name} , Email : ${email}`);
         });
 
 
