--- a/projects/localstorage/todolist.html
+++ b/projects/localstorage/todolist.html
@@ -57,6 +57,7 @@
   </head>
   <body>
     <div class="container">
+      <h3>Used Local Storage</h3>
       <h2>📝 To-Do List</h2>
       <input type="text" id="taskInput" placeholder="Add a new task" />
       <button onclick="addTask()">Add Task</button>
