--- a/self practice/gitapifetchin.html
+++ b/self practice/gitapifetchin.html
@@ -3,93 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Date Widget</title>
+    <title>Music Player</title>
     <style>
         body {
-            background: linear-gradient(to right, #6a11cb, #2575fc);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
-        }
-        .wrapper {
-            display: flex;
-            height: 320px;
-            width: 320px;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-        }
-        .left {
-            flex: 2;
-            background: white;
-            color: black;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-        }
-        .right {
-            flex: 1;
-            background: crimson;
+            text-align: center;
+            background-color: #222;
             color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            
+            padding: 20px;
         }
-        #date {
-            font-size: 4em;
-            font-weight: bold;
-            margin-bottom: 5px;
+        .player {
+            background: #333;
+            padding: 20px;
+            border-radius: 10px;
+            display: inline-block;
         }
-        #day {
-            font-size: 1.5em;
-            margin-top: 0;
+        button {
+            margin: 10px;
+            padding: 10px;
+            border: none;
+            background: #ff6600;
+            color: white;
+            cursor: pointer;
+            border-radius: 5px;
         }
-        #month {
-            font-size: 1.5em;
-            margin-bottom: 5px;
-           
-        }
-        #year {
-            font-size: 2em;
-            margin-top: 0;
+        input[type="range"] {
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="left">
-            <p id="date"></p>
-            <p id="day"></p>
-        </div>
-        <div class="right"> 
-            <p id="month"></p>
-            <p id="year"></p>
-        </div>
+    <div class="player">
+        <h2 id="song-title">Loading...</h2>
+        <button id="prev">Previous</button>
+        <button id="play">Play</button>
+        <button id="next">Next</button>
+        <br><br>
+        <input type="range" id="progress" min="0" max="100" value="0">
+        <br><br>
+        <input type="range" id="volume" min="0" max="100" value="50">
     </div>
+    <script>
+        const audio = new Audio();
+        let currentSongIndex = 0;
+        let songs = [];
+
+        async function fetchSongs() {
+            try {
+                const response = await fetch("https://api.example.com/songs"); // Replace with actual API
+                const data = await response.json();
+                songs = data.map(song => ({ title: song.title, src: song.url }));
+                loadSong();
+            } catch (error) {
+                console.error("Error fetching songs:", error);
+            }
+        }
+
+        document.getElementById("play").addEventListener("click", togglePlay);
+        document.getElementById("next").addEventListener("click", nextSong);
+        document.getElementById("prev").addEventListener("click", prevSong);
+        document.getElementById("volume").addEventListener("input", changeVolume);
+        document.getElementById("progress").addEventListener("input", seek);
+
+        function togglePlay() {
+            if (audio.paused) {
+                audio.play();
+                document.getElementById("play").textContent = "Pause";
+            } else {
+                audio.pause();
+                document.getElementById("play").textContent = "Play";
+            }
+        }
+
+        function nextSong() {
+            currentSongIndex = (currentSongIndex + 1) % songs.length;
+            loadSong();
+        }
+
+        function prevSong() {
+            currentSongIndex = (currentSongIndex - 1 + songs.length) % songs.length;
+            loadSong();
+        }
+
+        function loadSong() {
+            if (songs.length === 0) return;
+            audio.src = songs[currentSongIndex].src;
+            audio.play();
+            document.getElementById("play").textContent = "Pause";
+            document.getElementById("song-title").textContent = songs[currentSongIndex].title;
+        }
+
+        audio.addEventListener("timeupdate", () => {
+            document.getElementById("progress").value = (audio.currentTime / audio.duration) * 100;
+        });
+
+        function seek(event) {
+            audio.currentTime = (event.target.value / 100) * audio.duration;
+        }
+
+        function changeVolume(event) {
+            audio.volume = event.target.value / 100;
+        }
+
+        fetchSongs();
+    </script>
 </body>
-<script>
-    const date = document.getElementById("date");
-    const day = document.getElementById("day");
-    const month = document.getElementById("month");
-    const year = document.getElementById("year");
-
-    const today = new Date();
-    const weekDays = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-    const allMonths = [
-        "January", "February", "March", "April", "May", "June", 
-        "July", "August", "September", "October", "November", "December"
-    ];
-
-    date.innerHTML = (today.getDate() < 10 ? "0" : "") + today.getDate();
-    day.innerHTML = weekDays[today.getDay()];
-    month.innerHTML = allMonths[today.getMonth()];
-    year.innerHTML = today.getFullYear();
-</script>
 </html>
